fixed scrolling flickr on IE11 was affecting background image and the general smoothness of scroll

--- a/src/core/_base.css
+++ b/src/core/_base.css
@@ -1,6 +1,8 @@
 html {
   font-size: 1em;
   box-sizing: border-box;
+  overflow: hidden;
+  height: 100%;  
 }
 
 *,
@@ -10,6 +12,8 @@ html {
 }
 
 body {
+  overflow: auto;
+  height: 100%;
   background-color: var(--background-color);
   font-size: 1rem;
   line-height: 1.6rem;
